--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "devDependencies": {
     "@types/node": "^18.7.13",
     "typescript": "^4.7.4"
+  },
+  "dependencies": {
+    "commander": "^9.4.0"
   }
 }
