--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   "keywords": [],
   "author": "ChessMax",
   "license": "MIT",
+  "dependencies": {
+    "commander": "^9.4.0",
+    "glob": "^8.0.3"
+  },
   "devDependencies": {
+    "@types/glob": "^7.2.0",
     "@types/node": "^18.7.13",
     "typescript": "^4.7.4"
-  },
-  "dependencies": {
-    "commander": "^9.4.0"
   }
 }
