--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
   "license": "MIT",
   "dependencies": {
     "commander": "^9.4.0",
-    "glob": "^8.0.3"
+    "glob": "^8.0.3",
+    "markdown-it": "^13.0.1"
   },
   "devDependencies": {
     "@types/glob": "^7.2.0",
+    "@types/markdown-it": "^12.2.3",
     "@types/node": "^18.7.13",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
