--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "commander": "^9.4.0",
     "glob": "^8.0.3",
     "js-yaml": "^4.1.0",
-    "markdown-it": "^13.0.1"
+    "markdown-it": "^13.0.1",
+    "markdown-it-front-matter": "^0.2.3"
   },
   "devDependencies": {
     "@types/glob": "^7.2.0",
