--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "glob": "^8.0.3",
     "js-yaml": "^4.1.0",
     "markdown-it": "^13.0.1",
-    "markdown-it-front-matter": "^0.2.3"
+    "markdown-it-front-matter": "^0.2.3",
+    "vash": "^0.13.0"
   },
   "devDependencies": {
     "@types/glob": "^7.2.0",
