--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "commander": "^9.4.0",
     "glob": "^8.0.3",
+    "highlight.js": "^11.6.0",
     "js-yaml": "^4.1.0",
     "markdown-it": "^13.0.1",
     "markdown-it-front-matter": "^0.2.3",
@@ -23,6 +24,7 @@
   },
   "devDependencies": {
     "@types/glob": "^7.2.0",
+    "@types/highlightjs": "^9.12.2",
     "@types/js-yaml": "^4.0.5",
     "@types/markdown-it": "^12.2.3",
     "@types/node": "^18.7.13",
