--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/js-yaml": "^4.0.5",
     "@types/markdown-it": "^12.2.3",
     "@types/node": "^18.7.13",
+    "markdown-it-shiki": "^0.5.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   }
