--- a/package.json
+++ b/package.json
@@ -14,23 +14,23 @@
   "author": "ChessMax",
   "license": "MIT",
   "dependencies": {
-    "@types/fs-extra": "^9.0.13",
-    "@types/rimraf": "^3.0.2",
     "commander": "^9.4.0",
+    "consolidate": "^0.16.0",
     "fs-extra": "^10.1.0",
     "glob": "^8.0.3",
-    "highlight.js": "^11.6.0",
     "js-yaml": "^4.1.0",
     "markdown-it": "^13.0.1",
     "markdown-it-front-matter": "^0.2.3",
     "vash": "^0.13.0"
   },
   "devDependencies": {
+    "@types/fs-extra": "^9.0.13",
     "@types/glob": "^7.2.0",
     "@types/highlightjs": "^9.12.2",
     "@types/js-yaml": "^4.0.5",
     "@types/markdown-it": "^12.2.3",
     "@types/node": "^18.7.13",
+    "@types/consolidate": "^0.14.1",
     "markdown-it-shiki": "^0.5.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
