--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "commander": "^9.4.0",
     "consolidate": "^0.16.0",
+    "deepmerge-ts": "^4.2.2",
     "fs-extra": "^10.1.0",
     "glob": "^8.0.3",
     "js-yaml": "^4.1.0",
@@ -24,13 +25,13 @@
     "vash": "^0.13.0"
   },
   "devDependencies": {
+    "@types/consolidate": "^0.14.1",
     "@types/fs-extra": "^9.0.13",
     "@types/glob": "^7.2.0",
     "@types/highlightjs": "^9.12.2",
     "@types/js-yaml": "^4.0.5",
     "@types/markdown-it": "^12.2.3",
     "@types/node": "^18.7.13",
-    "@types/consolidate": "^0.14.1",
     "markdown-it-shiki": "^0.5.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
