--- a/example/config.yaml
+++ b/example/config.yaml
@@ -1,4 +1,8 @@
-﻿title: Мой Блогъ 2.0
+﻿site:
+  lang: ru
+  title: Мой Блогъ 2.0
+  created: 2011-07-21
+  description: Blog description
 author:
   name: ChessMax
   github: https://github.com/ChessMax
