--- a/example/config.yaml
+++ b/example/config.yaml
@@ -4,6 +4,7 @@ site:
   title: Мой Блогъ 2.0
   created: 2011-07-21
   description: Blog description
+  url: /dev-press/
 author:
   name: ChessMax
   github: https://github.com/ChessMax
