--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "commander": "^9.4.0",
     "consolidate": "^0.16.0",
     "deepmerge-ts": "^4.2.2",
+    "express": "^4.18.2",
     "fs-extra": "^10.1.0",
     "glob": "^8.0.3",
     "js-yaml": "^4.1.0",
@@ -26,6 +27,7 @@
   },
   "devDependencies": {
     "@types/consolidate": "^0.14.1",
+    "@types/express": "^4.17.14",
     "@types/fs-extra": "^9.0.13",
     "@types/glob": "^7.2.0",
     "@types/js-yaml": "^4.0.5",
@@ -33,6 +35,6 @@
     "@types/node": "^18.7.13",
     "markdown-it-shiki": "^0.5.1",
     "ts-node": "^10.9.1",
-    "typescript": "^4.7.4"
+    "typescript": "^4.8.4"
   }
 }
