--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "ChessMax",
   "license": "MIT",
   "dependencies": {
+    "chokidar": "^3.5.3",
     "commander": "^9.4.1",
     "consolidate": "^0.16.0",
     "deepmerge-ts": "^4.2.2",
@@ -26,6 +27,7 @@
     "vash": "^0.13.0"
   },
   "devDependencies": {
+    "@types/chokidar": "^2.1.3",
     "@types/consolidate": "^0.14.1",
     "@types/express": "^4.17.14",
     "@types/fs-extra": "^9.0.13",
