--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "js-yaml": "^4.1.0",
     "markdown-it": "^13.0.1",
     "markdown-it-front-matter": "^0.2.3",
-    "vash": "^0.13.0"
+    "vash": "^0.13.0",
+    "ws": "^8.9.0"
   },
   "devDependencies": {
+    "@types/ws": "^8.5.3",
     "@types/consolidate": "^0.14.1",
     "@types/express": "^4.17.14",
     "@types/fs-extra": "^9.0.13",
