--- a/package.json
+++ b/package.json
@@ -41,5 +41,8 @@
     "markdown-it-shiki": "^0.5.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
+  },
+  "np": {
+    "contents": "./lib"
   }
 }
