--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "devpress": "./lib.index.js"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"Error: no test specified\"",
     "build": "tsc -p ."
   },
   "prepublish": "tsc",
