--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "chokidar": "^3.5.3",
     "commander": "^9.4.1",
     "consolidate": "^0.16.0",
+    "cross-spawn": "^7.0.3",
     "deepmerge-ts": "^4.2.2",
     "express": "^4.18.2",
     "fs-extra": "^10.1.0",
@@ -35,6 +36,7 @@
     "ws": "^8.9.0"
   },
   "devDependencies": {
+    "@types/cross-spawn": "^6.0.2",
     "@types/consolidate": "^0.14.1",
     "@types/express": "^4.17.14",
     "@types/fs-extra": "^9.0.13",
