--- a/package.json
+++ b/package.json
@@ -32,12 +32,13 @@
     "js-yaml": "^4.1.0",
     "markdown-it": "^13.0.1",
     "markdown-it-front-matter": "^0.2.3",
+    "string-strip-html": "^8.4.0",
     "vash": "^0.13.0",
     "ws": "^8.9.0"
   },
   "devDependencies": {
-    "@types/cross-spawn": "^6.0.2",
     "@types/consolidate": "^0.14.1",
+    "@types/cross-spawn": "^6.0.2",
     "@types/express": "^4.17.14",
     "@types/fs-extra": "^9.0.13",
     "@types/glob": "^7.2.0",
